--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,15 @@
-# https://git-scm.com/docs/gitignore
-# https://help.github.com/articles/ignoring-files
-# Example .gitignore files: https://github.com/github/gitignore
-/bower_components/
-/node_modules/
+.DS_Store
+*/.DS_Store
+*/*/.DS_Store
+node_modules/
+.scannerwork
+sonar-*
+dist/
+settings.json
+package-lock\.json
+/build/
+/img/
+/package-lock.json
+/icons/mac/
+/icons/png/
+/icons/win/app.ico
